--- a/src/partials/statistic-item.html
+++ b/src/partials/statistic-item.html
@@ -26,7 +26,10 @@
                 <span>new</span>
             </div>
             <div class="satistic-img">
-                <img src="images/statistic-casino-2.png" alt="" itemprop="image"/>
+                <img src="http://royalbonuses.com/wp-content/uploads/2016/04/spin_princess_casino_logo_130x130.jpg" alt="" itemprop="image"/>
+            </div>
+            <div class="item-button">
+                <a href="http://royalbonuses.com/spinprincess" target="_blank" class="button-green"><span>PLAY NOW</span></a>
             </div>
         </div>
 
