--- a/src/sass/adaptation_scss/adaptation_develop_2.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_2.scss
@@ -121,7 +121,7 @@
         .top-imageblock{ text-align: left; }
     }
     .slice-wrap:after {display: none;}
-    .slice1{position: absolute;bottom: 0; left: 0; right: 0;}
+    /*.slice1{position: absolute;bottom: 0; left: 0; right: 0;}*/
     .slice3{margin-bottom: 350px;}
 
     /* fbf-widget */
