--- a/src/sass/adaptation_scss/adaptation_develop_1.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_1.scss
@@ -131,7 +131,7 @@
                 svg{width: 275px;height: 275px;}
             }
 
-            .statistic-content-logo{width:calc(100% - 280px);bottom:calc(100% - 280px);justify-content:flex-start;max-height: 200px;
+            .statistic-content-logo{width:calc(100% - 280px);bottom:calc(100% - 280px);justify-content:flex-start;max-height: 275px;
                 .statistic-logo-text{max-width: 200px;width: 100%;left: auto;right: 0;font-size: 16px;line-height: 30px;position: relative;}
                 .satistic-img{max-width: 200px;width: 100%;text-align: center;
                     img{width: 100%;}
@@ -258,9 +258,11 @@
             .statistic-content-svg{width: 150px;
                 svg{width: 130px;height: 130px;}
             }
-            .statistic-content-logo{width: calc(100% - 150px);bottom:calc(100% - 150px);
-                .statistic-logo-text{max-width: 150px;width: 100%;left: auto;right: 0;font-size: 14px;line-height: 20px;}
-                .satistic-img{max-width: 150px;}
+            .statistic-content-logo{width: calc(100% - 150px);max-height: 155px;/*bottom:calc(100% - 150px);*/
+                .statistic-logo-text{max-width: 120px;width: 100%;left: auto;right: 0;font-size: 14px;line-height: 20px;}
+                .satistic-img{max-width: 120px;
+                    img{max-width: none;max-height: 97px;width: 100%;}
+                }
             }
             .static-content-info{
                 .static-info-title{font-size: 16px;}
