--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -44,7 +44,7 @@
                     <li><a href="#"><span>Login</span></a></li>
                 </ul>
             </nav>
-            <div class="social">
+            <!-- <div class="social">
                 <div class="soc-wrap">
                     <b><a href="#" target="_blank"><img src="images/social-1.png" alt=""><img src="images/social-1-w.png" alt="" class="mobile-show"></a></b>
                     <span class="soc-mob">
@@ -54,6 +54,23 @@
                         <b><a href="#" target="_blank"><img src="images/social-4.png" alt=""><img src="images/social-4-w.png" alt="" class="mobile-show"></a></b>
                     </span>
                 </div>
+            </div> -->
+            <div class="header-search">
+                <form class="search-form" >
+                    <div class="form-row">
+                        <div class="form-input">
+                            <div class="form-input-wrap">
+                                <input type="text" name="search_field" placeholder="Search..." required="required">
+                            </div>
+                            <div class="form-input-clear"></div>
+                        </div>
+                        <div class="submit-button">
+                            <button type="submit">
+                                <img src="images/loop-img.png" alt="">
+                            </button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
