--- a/src/partials/statistic-item.html
+++ b/src/partials/statistic-item.html
@@ -31,6 +31,29 @@
             <div class="item-button">
                 <a href="http://royalbonuses.com/spinprincess" target="_blank" class="button-green"><span>PLAY NOW</span></a>
             </div>
+            <div class="shared-social">
+                <div class="inside-right-title">Share with friends</div>
+                <div class="inside-socials">
+                    <div class="inside-soc-item">
+                        <a href="#">
+                            <img src="images/inside-soc1.png" alt="">
+                            <div class="inside-soc-val">5</div>
+                        </a>
+                    </div>
+                    <div class="inside-soc-item">
+                        <a href="#">
+                            <img src="images/inside-soc2.png" alt="">
+                            <div class="inside-soc-val">2</div>
+                        </a>
+                    </div>
+                    <div class="inside-soc-item">
+                        <a href="#">
+                            <img src="images/inside-soc3.png" alt="">
+                            <div class="inside-soc-val">1</div>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="static-content-info">
