--- a/src/partials/casino-item.html
+++ b/src/partials/casino-item.html
@@ -10,6 +10,29 @@
             <div class="item-button">
                 <a href="#" class="button-green"><span>PLAY NOW</span></a>
             </div>
+            <div class="shared-social">
+                <div class="inside-right-title">Share with friends</div>
+                <div class="inside-socials">
+                    <div class="inside-soc-item">
+                        <a href="#">
+                            <img src="images/inside-soc1.png" alt="">
+                            <div class="inside-soc-val">5</div>
+                        </a>
+                    </div>
+                    <div class="inside-soc-item">
+                        <a href="#">
+                            <img src="images/inside-soc2.png" alt="">
+                            <div class="inside-soc-val">2</div>
+                        </a>
+                    </div>
+                    <div class="inside-soc-item">
+                        <a href="#">
+                            <img src="images/inside-soc3.png" alt="">
+                            <div class="inside-soc-val">1</div>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="texter">
             <h5 itemprop="name">10 EUR No Deposit Bonus at Super Casino</h5>
