--- a/src/sass/develop_scss/develop_4.scss
+++ b/src/sass/develop_scss/develop_4.scss
@@ -66,7 +66,7 @@ header{position: relative;z-index: 15;
         &:after,&:before{width: 100%;height: 100%;content: '';position: absolute;top: 0;right: calc(100% - 10px);background: url('../images/main-baner-left.jpg') center right no-repeat;}
         &:before{right: auto;left: calc(100% - 10px);background: url('../images/main-baner-left.jpg') center right no-repeat;transform: scale(-1,1);}
     }
-    .main-baner-wrap{background-color: #2b2b2b;padding: 40px 38px;height: 610px;}
+    .main-baner-wrap{background-color: #2b2b2b;/*padding: 40px 38px;*/height: 610px;}
     .main-baner-wrapper{height: 100%;border:3px solid #8f8f8f;}
     .item{width: 37%;float: left;height: 100%;position: relative;overflow: hidden;
         &.big{width: 63%;border-right: 3px solid #8f8f8f;}
@@ -103,6 +103,7 @@ header{position: relative;z-index: 15;
     .item-img-wrap{width: 28%;
         .item-img{margin-bottom: 10px;
             img{position: relative;left: 50%;transform: translateX(-50%);border-radius: 7px;overflow: hidden;}
+            &+.item-button+.shared-social{margin-top: 15px;}
         }
         .item-button{
             .button-green{line-height: 45px;text-decoration: none;font-size: 16px;}
@@ -172,3 +173,77 @@ header{position: relative;z-index: 15;
     }
 
 /* /texter taable */
+
+
+// some fix in 24.05.2016
+
+.fbf-widget .subscription_email{font-style: normal !important;}
+
+// header search
+.header-search{width: 20%;max-width: 250px;position: relative;transition:all ease .2s;
+    .form-input{position: relative;z-index: 1;}
+    .form-input-clear{position: absolute;width: 11px;height: 11px;right: 15px;top: -webkit-calc(50% - 6px);top: -moz-calc(50% - 6px);top: calc(50% - 6px);cursor: pointer;
+        &:after,&:before{content: '';display: block;position: absolute;height: 2px;width: 13px;border-radius: 30%;background-color: #8c8c8b;top: calc(50% - 1px);left: calc(50% - 7px);transform-origin: 50% 50%;opacity: .5;transition: all 300ms ease;transform: rotate(45deg) translateZ(0px)}
+        &:before{transform: rotate(-45deg) translateZ(0px);}
+
+        &:hover{
+            &:after,&:before{background-color: #000;}
+        }
+    }
+    .form-input-wrap{
+        input{width: 100%;max-width: 280px;height: 51px;display: block;padding: 0 40px 0px 40px;border:none;color: #8c8c8b;font-size: 14px;border-left:2px solid #d9d9d9;
+            &::-webkit-input-placeholder {color:#8c8c8b;}
+            &:-moz-placeholder {color:#8c8c8b;}
+            &::-moz-placeholder {color:#8c8c8b;}
+            &:-ms-input-placeholder {color:#8c8c8b;}
+
+            &.error{
+                &::-webkit-input-placeholder {color:red;}
+                &:-moz-placeholder {color:red;}
+                &::-moz-placeholder {color:red;}
+                &:-ms-input-placeholder {color:red;}
+            }
+        }
+    }
+    .submit-button{position: absolute;top: calc(50% - 9px);left: 7px;z-index: 2;cursor: pointer;
+        &:hover{
+            button{opacity: .55;}
+        }
+        button{border: none;background-color: transparent;opacity: .25;transition: opacity 300ms ease;cursor: pointer;}
+    }
+}
+
+
+// contact us page
+.casino-item .texter.cont-form{margin:0 auto;}
+.texter .wpcf7{max-width: 280px;width: 100%;margin:0 auto;
+    .ajax-loader{display: none;}
+    p{margin:0 auto;margin-bottom: 30px;}
+    input,textarea{height: 50px;background-color: #fff;border: 1px solid #c5c5c5;border-radius: 3px;text-align: center;line-height: 50px;padding: 0 5px;width: 100%;color: #a0a0a0;font-family: 'Asap',sans-serif;
+        &::-webkit-input-placeholder {color: #a0a0a0;font-family: 'Asap',sans-serif;text-transform: uppercase;}
+        &:-moz-placeholder {color: #a0a0a0;font-family: 'Asap',sans-serif;text-transform: uppercase;}
+        &::-moz-placeholder {color: #a0a0a0;font-family: 'Asap',sans-serif;text-transform: uppercase;}
+        &:-ms-input-placeholder {color: #a0a0a0;font-family: 'Asap',sans-serif;text-transform: uppercase;}
+    }
+    textarea{height: 120px;resize:none;text-align: left;
+        &::-webkit-input-placeholder {text-align: center;}
+        &:-moz-placeholder {text-align: center;}
+        &::-moz-placeholder {text-align: center;}
+        &:-ms-input-placeholder {text-align: center;}
+
+    }
+    input[type=submit]{background-color: #336699;cursor:pointer;font-size: 16px;font-weight: 700;text-transform: uppercase;color: white;
+        &:hover{background-color: #1D4975;color: #f7f7f7;}
+    }
+}
+
+.shared-social{max-width: 130px;margin:0 auto;
+    .inside-right-title{font-weight: 500;font-size: 12px;color: #000;text-transform: uppercase;text-align: center;margin-bottom: 10px;}
+    .inside-socials{display: flex;justify-content: center;align-items: center;}
+    .inside-soc-item{margin:0 10px;
+        a{position: relative;display: inline-block;
+            img{transition: opacity 300ms ease;}
+        }
+        .inside-soc-val{position: absolute;top: -8px;right: -8px;border: 2px solid #fff;width: 17px;height: 17px;background-color: #d24a43;font-size: 10px;color: #fff;display: flex;justify-content: center;align-items: center;border-radius: 50%;}
+    }
+}
