--- a/src/sass/develop_scss/develop_4.scss
+++ b/src/sass/develop_scss/develop_4.scss
@@ -178,6 +178,15 @@ header{position: relative;z-index: 15;
 // some fix in 24.05.2016
 
 .fbf-widget .subscription_email{font-style: normal !important;}
+.paginator span.extend{display: none;}
+
+
+// some fix in 26.05.2016
+.item-search-casino{margin-top: 28px;padding-top: 5px;margin-bottom: 0px;padding-bottom: 30px;
+    &:last-child{margin-bottom: 0;}
+}
+
+
 
 // header search
 .header-search{width: 20%;max-width: 250px;position: relative;transition:all ease .2s;
@@ -247,3 +256,4 @@ header{position: relative;z-index: 15;
         .inside-soc-val{position: absolute;top: -8px;right: -8px;border: 2px solid #fff;width: 17px;height: 17px;background-color: #d24a43;font-size: 10px;color: #fff;display: flex;justify-content: center;align-items: center;border-radius: 50%;}
     }
 }
+
