--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -127,6 +127,22 @@
                     <img src="images/social-4-w.png" alt="" />
                 </a>
             </div>
+            
+            
+            <div class="textwidget">
+                <a href="#">
+                    <img src="images/social-1-w.png" alt="" />
+                </a>
+                <a href="#">
+                    <img src="images/social-2-w.png" alt="" />
+                </a>
+                <a href="#">
+                    <img src="images/social-3-w.png" alt="" />
+                </a>
+                <a href="#">
+                    <img src="images/social-4-w.png" alt="" />
+                </a>
+            </div>
 
             <div class="footer-text">
                 <p>Netentcasino.com is not part of, related to or have any commercial relationship with Net entertainment AB</p>
