--- a/src/sass/develop_scss/develop_1.scss
+++ b/src/sass/develop_scss/develop_1.scss
@@ -16,12 +16,14 @@
             }
         }
         .footer-bottom{
-            .footer-social-links{border-bottom: 1px solid #adadad;display: flex;justify-content:center;padding-bottom: 30px;margin-bottom: 25px;
+            .footer-social-links{display: flex;justify-content:center;padding-bottom: 25px;
                 a{display: flex;justify-content:center;align-items:center;width: 50px;height: 50px;background-color: #666666;transition:background-color 300ms ease;margin: 0 8px;
                     &:hover{background-color: orange;}
                 }
             }
-            .footer-text{text-align: center;font-size: 12px;color:#b8b8b8;line-height: 18px;}
+            
+            .textwidget{  margin-bottom: 25px;}
+            .footer-text{text-align: center;font-size: 12px;color:#b8b8b8; line-height: 18px; border-top: 1px solid #adadad; padding-top: 25px;}
         }
     }
 
