--- a/src/sass/develop_scss/develop_4.scss
+++ b/src/sass/develop_scss/develop_4.scss
@@ -70,7 +70,7 @@ header{position: relative;z-index: 15;
     .main-baner-wrapper{height: 100%;border:3px solid #8f8f8f;}
     .item{width: 37%;float: left;height: 100%;position: relative;overflow: hidden;
         &.big{width: 63%;border-right: 3px solid #8f8f8f;}
-        img{position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);max-width: none;min-height: 100%;min-width: 100%;}
+        img{position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);max-width: none;min-height: 100%;min-width: 100%;max-height: 100%;}
     }
     .sub-item{width: 100%;height: 50%;position: relative;overflow: hidden;
         &:first-child{border-bottom: 3px solid #8f8f8f;
